Update Random Sequence generator v0-35.ipynb

--- a/Random Sequence generator v0-35.ipynb
+++ b/Random Sequence generator v0-35.ipynb
@@ -327,7 +327,7 @@
     "#print out the dataframe as CSV\n",
     "name = input(\"Insert a name to save the sequence: \")\n",
     "name_csv = name+'.csv'\n",
-    "comments.to_csv(name_csv)\n",
+    "comments.to_csv(name_csv, index = False)\n",
     "print('A csv file called:',name,' has been created with the randomized sequence.')"
    ]
   },
